--- a/index.html
+++ b/index.html
@@ -21,18 +21,55 @@
 
    <!-- Main Content -->
     <main class="main">
+        <!-- Skeleton for main Article -->
+         <div class="skeleton featured-article-skeleton">
+            <div class="skeleton-image"></div>
+            <div class="skeleton-line skeleton-line--large"></div>
+            <div class="skeleton-line"></div>
+            <div class="skeleton-line"></div>
+            <div class="skeleton-line"></div>
+         </div>
+
+         <!-- skeleton for smaller Articles -->
+
+            <div class="smaller-articles">
+                <div class="skeleton article-skeleton">
+                    <div class="skeleton-image"></div>
+                    <div class="skeleton-line skeleton-line--large"></div>
+                    <div class="skeleton-line"></div>
+                    <div class="skeleton-line"></div>
+                    <div class="skeleton-line"></div>
+                </div>
+
+                   <div class="skeleton article-skeleton">
+                    <div class="skeleton-image"></div>
+                    <div class="skeleton-line skeleton-line--large"></div>
+                    <div class="skeleton-line"></div>
+                    <div class="skeleton-line"></div>
+                    <div class="skeleton-line"></div>
+                </div>
+
+                   <div class="skeleton article-skeleton">
+                    <div class="skeleton-image"></div>
+                    <div class="skeleton-line skeleton-line--large"></div>
+                    <div class="skeleton-line"></div>
+                    <div class="skeleton-line"></div>
+                    <div class="skeleton-line"></div>
+                </div>
+            </div>
+
         <!-- Main Featured Article -->
-         <div class="featured-article">
+         <div class="featured-article hidden">
             <img src="https://images.unsplash.com/photo-1756142754696-2bc410d5b248?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Man in Nature">
             <h1>Finding Stillness in a Busy World: Why Nature Is the Best Reset Button</h1>
             <p>Life moves fast. Between constant notifications, responsibilities, and the pressure to “always be doing something,” it’s easy to lose track of yourself...</p>
-            <a href="article1.html">Read More</a>
+            <a href="1.html">Read More</a>
          </div>
 
          <!-- Three Smaller Articles -->
           <div class="smaller-articles">
             <!-- Article 2 -->
-            <div class="article">
+            <div class="article hidden">
                  <img src="https://images.unsplash.com/photo-1762795116942-1faf2ae6cf84?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Woman Posing">
                  <h2>The Beauty of Slow Living: Reclaiming Your Time and Your Peace</h2>
                  <p>Modern life pushes us to move fast, but rushing through everything leaves us tired and disconnected...</p>
@@ -40,7 +77,7 @@
             </div>
 
             <!-- Article 3 -->
-            <div class="article">
+            <div class="article hidden">
                  <img src="https://plus.unsplash.com/premium_photo-1762801249520-9bb5f0fd92ef?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw1OHx8fGVufDB8fHx8fA%3D%3D" alt="Two People running with a basket">
                  <h2>Choosing Moments Over Materials: The Reason Experiences Make Life Meaningful</h2>
                  <p>Possessions don’t bring lasting joy. Their excitement fades quickly, but memories stay with us...</p>
@@ -48,13 +85,13 @@
             </div>
 
             <!-- Article 4 -->
-            <div class="article">
+            <div class="article hidden">
                  <img src="https://images.unsplash.com/photo-1762859718180-809d08930294?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw2NXx8fGVufDB8fHx8fA%3D%3D" alt="Animated Fern">
                  <h2>Where Creativity Begins: Learning to See the World Different</h2>
                  <p>Creativity isn’t a rare talent — it begins with curiosity and noticing details others overlook...</p>
                  <a href="article4.html">Read More</a>
             </div>
-
+          </div>
          
     </main>
 
